--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
                 </div>
                 <div class="container">
                     <div class="grid two-equal-col">
-                        <div class="pt_40">
+                        <div class="pt_40 flex">
                             <h1 class="text_lg regular">
-                                We <strong>Design, Develop</strong> and
-                                <strong>Market</strong> state-of-the-art
+                                <strong>We Design, Develop and
+                                    Market</strong> state-of-the-art
                                 digital solutions for you
                             </h1>
                             <p class="grey pt_40 medium">
@@ -135,7 +135,7 @@
 
             <section id="counters" class="pt_120 pb_60 vertical-scrolling h-auto">
                 <div class="container">
-                    <div class="flex pb_60">
+                    <div class="flex pb_30">
                         <div>
                             <p class="justify pt_30 medium">
                                 StartxLabs provide expert software design and development services so you can create
@@ -155,19 +155,19 @@
                         </div>
                     </div>
                     <div class="flex three-equal-col pb_16 pt_30">
-                        <div class="counter-box">
+                        <div class="counter-box active">
                             <div class="number">
                                 <span>100</span><span>+</span>
                             </div>
                             <p>Engineers and consultants</p>
                         </div>
-                        <div class="counter-box">
+                        <div class="counter-box active">
                             <div class="number">
                                 <span>08</span><span>+</span>
                             </div>
                             <p>years of Experience</p>
                         </div>
-                        <div class="counter-box">
+                        <div class="counter-box blue regular text_xl pb_40">
                             <div class="number">
                                 <span>50</span><span>+</span>
                             </div>
@@ -195,7 +195,7 @@
             </div>
         </section>
 
-        <section id="services" class="pt_155 h-auto">
+        <section id="services" class="pt_88 h-auto pb_60">
             <div class="container-right">
 
 
@@ -393,7 +393,7 @@
 
             <div class="container-left">
 
-                <div class="servicesSliderTwo pt_60">
+                <div class="servicesSliderTwo">
 
                     <div class="splide__track">
                         <div class="splide__list">
@@ -566,8 +566,8 @@
         <section id="cards" class="pt_120 pb_60 h-auto">
             <div class="container">
                 <h2 class="blue regular text_xl pb_40">
-                    Let's <strong class="medium">build</strong> something<br>
-                    <strong class="medium">together</strong> that matters
+                    Let's <strong class="">build</strong> something<br>
+                    <strong class="">together</strong> that matters
                 </h2>
                 <a href="javascript:void(0)" class="btn-1" onclick="focusForm2()">Contact Us</a>
                 <div class="flex pt_60" id="case-studies">
@@ -763,7 +763,7 @@
             </div>
         </section>
 
-        <section id="why" class="pt_88 pb_88 h-auto">
+        <section id="why" class="pt_88 pb_40 h-auto">
             <div class="container-left">
                 <h2 class="text_xxl medium mob-text-center" style="line-height:1.2">Why <br>
                     us.
