--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                         </div>
                         <div>
                             <div class="form" id="form">
+                                <h2 class="text_xs pb_16 mob-only">Contact Us</h2>
                                 <form>
                                     <input type="text" name="name" id="name" placeholder="Name *" required="">
                                     <input type="tel" name="mobileNumber" id="mobileNumber"
@@ -167,7 +168,7 @@
                             </div>
                             <p>years of Experience</p>
                         </div>
-                        <div class="counter-box blue regular text_xl pb_40">
+                        <div class="counter-box active regular text_xl pb_40">
                             <div class="number">
                                 <span>50</span><span>+</span>
                             </div>
@@ -1036,69 +1037,37 @@
                     }
                 }
             ]
-        })
+        });
 
 
-        mobileOnlySlider("#reviews .grid", true, false, 767);
-
-        function mobileOnlySlider($slidername, $dots, $arrows, $breakpoint) {
-            var slider = $($slidername);
-            var settings = {
-                mobileFirst: true,
-                slidesToShow: 1,
-                slidesToScroll: 1,
-                arrows: false,
-                dots: true,
-                responsive: [
+        function checkPosition() {
+            if (window.matchMedia('(max-width: 767px)').matches) {
+                $('#reviews .grid').slick(
                     {
-                        breakpoint: $breakpoint,
-                        settings: "unslick"
+                        slidesToShow: 1,
+                        slidesToScroll: 1,
+                        arrows: false,
+                        dots: true,
+                        autoplay: true,
                     }
-                ]
-            };
+                );
 
-            slider.slick(settings);
-
-            $(window).on("resize", function () {
-                if ($(window).width() > $breakpoint) {
-                    return;
-                }
-                if (!slider.hasClass("slick-initialized")) {
-                    return slider.slick(settings);
-                }
-            });
-        }
-
-        mobileOnlySlider2("#web-technologies .flex", true, false, 767);
-
-        function mobileOnlySlider2($slidername, $dots, $arrows, $breakpoint) {
-            var slider = $($slidername);
-            var settings = {
-                mobileFirst: true,
-                autoplay: true,
-                slidesToShow: 3,
-                slidesToScroll: 1,
-                arrows: false,
-                dots: false,
-                responsive: [
+                $('#web-technologies .flex').slick(
                     {
-                        breakpoint: $breakpoint,
-                        settings: "unslick"
+                        autoplay: true,
+                        slidesToShow: 3,
+                        slidesToScroll: 1,
+                        arrows: false,
+                        dots: false,
+                        autoplay: true,
                     }
-                ]
-            };
-
-            slider.slick(settings);
-
-            $(window).on("resize", function () {
-                if ($(window).width() > $breakpoint) {
-                    return;
-                }
-                if (!slider.hasClass("slick-initialized")) {
-                    return slider.slick(settings);
-                }
-            });
+                )
+            }
         }
+        $(window).on("resize load", function () {
+            checkPosition()
+        });
+
 
         document.addEventListener("DOMContentLoaded", function () {
             const thumbnails = new Splide('.servicesSliderTwo', {
