--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
         </div>
 
-        <section id="reviews" class="pt_30 pb_60 h-auto">
+        <section id="reviews" class="pb_60 h-auto">
             <div class="container">
                 <div class="grid three-equal-col">
                     <div class="text-center">
