--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
         rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
+        rel="stylesheet"> -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/slick.min.css">
     <link rel="stylesheet" href="css/slick-theme.css">
@@ -147,7 +151,9 @@
                                 StartxLabs provide expert software design and development services so you can create
                                 innovative world-class products. Our offshore development teams deliver the benefits of
                                 tech
-                                expertise. We work hard to deliver 100% client satisfaction and get growth for our
+                                expertise. We work hard to deliver <strong class="blue medium font-inherit">100% client
+                                    satisfaction</strong>
+                                and get growth for our
                                 customer's business.
                             </p>
                         </div>
@@ -188,13 +194,13 @@
         <section id="reviews" class="pb_60 h-auto">
             <div class="container">
                 <div class="grid three-equal-col">
-                    <div class="text-center">
+                    <div class="">
                         <img src="img/review-01.png" class="img-responsive">
                     </div>
-                    <div class="text-center">
+                    <div class="">
                         <img src="img/review-02.png" class="img-responsive">
                     </div>
-                    <div class="text-center">
+                    <div class="">
                         <img src="img/review-03.png" class="img-responsive">
                     </div>
                 </div>
@@ -771,8 +777,9 @@
 
         <section id="why" class="pt_88 pb_40 h-auto">
             <div class="container-left">
-                <h2 class="text_xxl medium mob-text-center" style="line-height:1.2">Why <br>
-                    us.
+                <h2 class="text_xxl medium mob-text-center" style="line-height:1.2">
+                    <strong>Why <br>
+                        us.</strong>
                 </h2>
 
                 <div class="testimonialSlider pt_40">
@@ -856,10 +863,10 @@
                 </div>
                 <div class="form-flex pt_88">
                     <div class="mt_16">
-                        <h3 class="bold text_md white">
+                        <h3 class="semi-bold text_md white">
                             Looking for a custom website or mobile app development partner?
                         </h3>
-                        <p class="text_xs pt_30 white">We are always available to collaborate in our clients time
+                        <p class="pt_30 white">We are always available to collaborate in our clients time
                             zone
                         </p>
                         <div class="pt_60">
