--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                                         <div class="text-center"><img src="img/service-img-1.png"
                                                 class="img-responsive"></div>
                                         <div>
-                                            <h3 class="text_xxxl">DevOps Services and Solutionss</h3>
+                                            <h3 class="text_xxxl">DevOps Services and Solutions</h3>
                                             <p class="pt_30">
                                                 Lorem ipsum dolor sit amet,consectetur adipiscing elit. Lorem proin
                                                 habitant non
@@ -455,7 +455,7 @@
                                 <div class="service-box">
                                     <img src="img/traced-07.png" alt="traced" class="traced">
                                     <img src="img/s-07.png" alt="cloud">
-                                    <h3>DevOps Services and Solutionss</h3>
+                                    <h3>DevOps Services and Solutions</h3>
                                 </div>
                             </div>
                             <div class="splide__slide">
@@ -482,95 +482,6 @@
                         </div>
                     </div>
                 </div>
-
-                <!-- <div class="servicesSliderTwo pt_60">
-
-                    <div class="swiper-container">
-                        <div class="swiper-wrapper">
-
-                            <div class="swiper-slide">
-                                <div class="service-box">
-                                    <img src="img/traced-01.png" alt="traced" class="traced">
-                                    <img src="img/s-02.png" alt="cloud">
-                                    <h3>Mobile Application Development</h3>
-                                </div>
-                            </div>
-
-                            <div class="swiper-slide">
-                                <div class="service-box">
-                                    <img src="img/traced-02.png" alt="traced" class="traced">
-                                    <img src="img/s-02.png" alt="cloud">
-                                    <h3>Web Application Development</h3>
-                                </div>
-                            </div>
-
-                            <div class="swiper-slide">
-                                <div class="service-box">
-                                    <img src="img/traced-03.png" alt="traced" class="traced">
-                                    <img src="img/s-03.png" alt="cloud">
-                                    <h3>Website & CMS Development</h3>
-                                </div>
-                            </div>
-
-                            <div class="swiper-slide">
-                                <div class="service-box">
-                                    <img src="img/traced-04.png" alt="traced" class="traced">
-                                    <img src="img/s-04.png" alt="cloud">
-                                    <h3>Cloud Solutions</h3>
-                                </div>
-                            </div>
-
-                            <div class="swiper-slide">
-                                <div class="service-box">
-                                    <img src="img/traced-05.png" alt="traced" class="traced">
-                                    <img src="img/s-05.png" alt="cloud">
-                                    <h3>Digital Marketing</h3>
-                                </div>
-                            </div>
-
-                            <div class="swiper-slide">
-                                <div class="service-box">
-                                    <img src="img/traced-06.png" alt="traced" class="traced">
-                                    <img src="img/s-06.png" alt="cloud">
-                                    <h3>Data, BI, & Analytics Consulting Services</h3>
-                                </div>
-                            </div>
-
-                            <div class="swiper-slide">
-                                <div class="service-box">
-                                    <img src="img/traced-07.png" alt="traced" class="traced">
-                                    <img src="img/s-07.png" alt="cloud">
-                                    <h3>DevOps Services and Solutionss</h3>
-                                </div>
-                            </div>
-
-                            <div class="swiper-slide">
-                                <div class="service-box">
-                                    <img src="img/traced-08.png" alt="traced" class="traced">
-                                    <img src="img/s-08.png" alt="cloud">
-                                    <h3>Quality & Perfor-mance Engineering</h3>
-                                </div>
-                            </div>
-
-                            <div class="swiper-slide">
-                                <div class="service-box">
-                                    <img src="img/traced-09.png" alt="traced" class="traced">
-                                    <img src="img/s-09.png" alt="cloud">
-                                    <h3>Blockchain</h3>
-                                </div>
-                            </div>
-
-                            <div class="swiper-slide">
-                                <div class="service-box">
-                                    <img src="img/traced-10.png" alt="traced" class="traced">
-                                    <img src="img/s-10.png" alt="cloud">
-                                    <h3>No Code solutions</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div> -->
 
             </div>
         </section>
@@ -586,11 +497,12 @@
                     <div class="card-item" data-scroll>
                         <img src="img/s-01.jpg" alt="card-01">
                         <h3 class="text_med pb_16">Lorem ipsum dolor sit amet, </h3>
-                        <p class="pb_30">
+                        <p class="">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum massa congue ultricies
                             quam pulvinar molestie.
                         </p>
-                        <a href="javascript:void(0)" class="btn-2">View</a>
+                        <div class="location pb_30 font-inherit"><img src="/img/location.svg"> India</div>
+                        <div class="hastags blue semi-bold font-inherit">#Mobile App</div>
                     </div>
 
                     <div class="card-item" data-scroll>
@@ -600,7 +512,7 @@
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum massa congue ultricies
                             quam pulvinar molestie.
                         </p>
-                        <a href="javascript:void(0)" class="btn-2">View</a>
+                        <div class="hastags blue semi-bold font-inherit">#Mobile App</div>
                     </div>
 
                     <div class="card-item" data-scroll>
@@ -610,7 +522,7 @@
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum massa congue ultricies
                             quam pulvinar molestie.
                         </p>
-                        <a href="javascript:void(0)" class="btn-2">View</a>
+                        <div class="hastags blue semi-bold font-inherit">#Mobile App</div>
                     </div>
 
                     <div class="card-item" data-scroll>
@@ -620,35 +532,76 @@
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum massa congue ultricies
                             quam pulvinar molestie.
                         </p>
-                        <a href="javascript:void(0)" class="btn-2">View</a>
+                        <div class="hastags blue semi-bold font-inherit">#Mobile App</div>
                     </div>
 
                     <!-- view more -->
 
-                    <!-- <div class="card-item" data-scroll>
-                        <img src="img/card-04.jpg" alt="card-01">
+                    <div class="card-item" data-scroll>
+                        <img src="img/s-01.jpg" alt="card-01">
                         <h3 class="text_med pb_16">Lorem ipsum dolor sit amet, </h3>
-                        <p class="pb_30">
+                        <p class="">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum massa congue ultricies
                             quam pulvinar molestie.
                         </p>
-                        <a href="javascript:void(0)" class="btn-2">View</a>
+                        <div class="location pb_30 font-inherit"><img src="/img/location.svg"> India</div>
+                        <div class="hastags blue semi-bold font-inherit">#Mobile App</div>
                     </div>
 
                     <div class="card-item" data-scroll>
-                        <img src="img/card-04.jpg" alt="card-01">
+                        <img src="img/s-02.jpg" alt="card-01">
                         <h3 class="text_med pb_16">Lorem ipsum dolor sit amet, </h3>
                         <p class="pb_30">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum massa congue ultricies
                             quam pulvinar molestie.
                         </p>
-                        <a href="javascript:void(0)" class="btn-2">View</a>
-                    </div> -->
+                        <div class="hastags blue semi-bold font-inherit">#Mobile App</div>
+                    </div>
+
+                    <div class="card-item" data-scroll>
+                        <img src="img/s-03.jpg" alt="card-01">
+                        <h3 class="text_med pb_16">Lorem ipsum dolor sit amet, </h3>
+                        <p class="pb_30">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum massa congue ultricies
+                            quam pulvinar molestie.
+                        </p>
+                        <div class="hastags blue semi-bold font-inherit">#Mobile App</div>
+                    </div>
+
+                    <div class="card-item" data-scroll>
+                        <img src="img/s-04.jpg" alt="card-01">
+                        <h3 class="text_med pb_16">Lorem ipsum dolor sit amet, </h3>
+                        <p class="pb_30">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum massa congue ultricies
+                            quam pulvinar molestie.
+                        </p>
+                        <div class="hastags blue semi-bold font-inherit">#Mobile App</div>
+                    </div>
+
+                    <div class="card-item" data-scroll>
+                        <img src="img/s-03.jpg" alt="card-01">
+                        <h3 class="text_med pb_16">Lorem ipsum dolor sit amet, </h3>
+                        <p class="pb_30">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum massa congue ultricies
+                            quam pulvinar molestie.
+                        </p>
+                        <div class="hastags blue semi-bold font-inherit">#Mobile App</div>
+                    </div>
+
+                    <div class="card-item" data-scroll>
+                        <img src="img/s-04.jpg" alt="card-01">
+                        <h3 class="text_med pb_16">Lorem ipsum dolor sit amet, </h3>
+                        <p class="pb_30">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum massa congue ultricies
+                            quam pulvinar molestie.
+                        </p>
+                        <div class="hastags blue semi-bold font-inherit">#Mobile App</div>
+                    </div>
 
                 </div>
-                <!-- <div class="text-center pb_40">
+                <div class="text-center pb_40">
                     <a href="javascript:void(0)" class="btn-1" id="more-service">View More</a>
-                </div> -->
+                </div>
             </div>
         </section>
 
@@ -996,7 +949,7 @@
                                 <div class="text_sm">
                                     <p class="text_sm">
                                         264, Udyog Vihar Phase-1, <br>
-                                        Sec-20 Gurugram, Haryana <br>
+                                        Sec-20 Gurugram, Haryana
                                         122016, India
                                     </p>
                                 </div>
@@ -1140,6 +1093,24 @@
                 } else {
                     $(".tech-box:lt(" + items + ")").show();
                     $("#more-tech").hide();
+                }
+                $("html, body").animate({ scrollTop: "+=150px" }, 800);
+            });
+        });
+
+        $(document).ready(function () {
+            var shown = 4;
+            $(".card-item").hide();
+            $(".card-item:lt(" + shown + ")").show();
+
+            var items = $(".card-item").length;
+            $("#more-service").click(function () {
+                shown = $(".card-item:visible").length + 4;
+                if (shown < items) {
+                    $(".card-item:lt(" + shown + ")").show();
+                } else {
+                    $(".card-item:lt(" + items + ")").show();
+                    $("#more-service").hide();
                 }
                 $("html, body").animate({ scrollTop: "+=150px" }, 800);
             });
