--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
             </div>
         </section>
 
-        <section id="services" class="pt_88 h-auto pb_60">
-            <div class="container-right">
+        <section id="services" class="pt_40 h-auto pb_60">
+            <div class="container">
 
 
                 <div class="servicesSliderOne">
@@ -212,7 +212,7 @@
                             <div class="splide__slide">
                                 <div>
                                     <div class="grid two-equal-col align-center">
-                                        <div class="text-center"><img src="img/service-img-1.png"
+                                        <div class="text-center"><img src="img/mobile-app-developemnt.png"
                                                 class="img-responsive"></div>
                                         <div>
                                             <h3 class="text_xxxl">Mobile Application Development</h3>
@@ -230,7 +230,7 @@
                             <div class="splide__slide">
                                 <div>
                                     <div class="grid two-equal-col align-center">
-                                        <div class="text-center"><img src="img/service-img-1.png"
+                                        <div class="text-center"><img src="img/web-app-development.png"
                                                 class="img-responsive"></div>
                                         <div>
                                             <h3 class="text_xxxl">Web Application Development</h3>
@@ -248,8 +248,8 @@
                             <div class="splide__slide">
                                 <div>
                                     <div class="grid two-equal-col align-center">
-                                        <div class="text-center"><img src="img/service-img-1.png"
-                                                class="img-responsive"></div>
+                                        <div class="text-center"><img src="img/technology.png" class="img-responsive">
+                                        </div>
                                         <div>
                                             <h3 class="text_xxxl">Website & CMS Development</h3>
                                             <p class="pt_30">
@@ -266,8 +266,7 @@
                             <div class="splide__slide">
                                 <div>
                                     <div class="grid two-equal-col align-center">
-                                        <div class="text-center"><img src="img/service-img-1.png"
-                                                class="img-responsive"></div>
+                                        <div class="text-center"><img src="img/custom.png" class="img-responsive"></div>
                                         <div>
                                             <h3 class="text_xxxl">Cloud Solutions</h3>
                                             <p class="pt_30">
@@ -407,7 +406,7 @@
                             <div class="splide__slide">
                                 <div class="service-box">
                                     <img src="img/traced-01.png" alt="traced" class="traced">
-                                    <img src="img/s-02.png" alt="cloud">
+                                    <img src="img/s-01.png" alt="cloud">
                                     <h3>Mobile Application Development</h3>
                                 </div>
                             </div>
@@ -503,10 +502,11 @@
                     <div class="card-item" data-scroll>
                         <img src="img/s-02.jpg" alt="card-01">
                         <h3 class="text_med pb_16">Lorem ipsum dolor sit amet, </h3>
-                        <p class="pb_30">
+                        <p class="">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum massa congue ultricies
                             quam pulvinar molestie.
                         </p>
+                        <div class="location pb_30 font-inherit"><img src="/img/location.svg"> India</div>
                         <div class="hastags blue semi-bold font-inherit">#Mobile App</div>
                     </div>
 
@@ -517,6 +517,7 @@
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum massa congue ultricies
                             quam pulvinar molestie.
                         </p>
+                        <div class="location pb_30 font-inherit"><img src="/img/location.svg"> India</div>
                         <div class="hastags blue semi-bold font-inherit">#Mobile App</div>
                     </div>
 
@@ -527,6 +528,7 @@
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum massa congue ultricies
                             quam pulvinar molestie.
                         </p>
+                        <div class="location pb_30 font-inherit"><img src="/img/location.svg"> India</div>
                         <div class="hastags blue semi-bold font-inherit">#Mobile App</div>
                     </div>
 
@@ -550,6 +552,7 @@
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum massa congue ultricies
                             quam pulvinar molestie.
                         </p>
+                        <div class="location pb_30 font-inherit"><img src="/img/location.svg"> India</div>
                         <div class="hastags blue semi-bold font-inherit">#Mobile App</div>
                     </div>
 
@@ -560,6 +563,7 @@
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum massa congue ultricies
                             quam pulvinar molestie.
                         </p>
+                        <div class="location pb_30 font-inherit"><img src="/img/location.svg"> India</div>
                         <div class="hastags blue semi-bold font-inherit">#Mobile App</div>
                     </div>
 
@@ -570,6 +574,7 @@
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum massa congue ultricies
                             quam pulvinar molestie.
                         </p>
+                        <div class="location pb_30 font-inherit"><img src="/img/location.svg"> India</div>
                         <div class="hastags blue semi-bold font-inherit">#Mobile App</div>
                     </div>
 
@@ -580,6 +585,7 @@
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum massa congue ultricies
                             quam pulvinar molestie.
                         </p>
+                        <div class="location pb_30 font-inherit"><img src="/img/location.svg"> India</div>
                         <div class="hastags blue semi-bold font-inherit">#Mobile App</div>
                     </div>
 
@@ -590,6 +596,7 @@
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum massa congue ultricies
                             quam pulvinar molestie.
                         </p>
+                        <div class="location pb_30 font-inherit"><img src="/img/location.svg"> India</div>
                         <div class="hastags blue semi-bold font-inherit">#Mobile App</div>
                     </div>
 
@@ -864,7 +871,7 @@
                             Craft your <strong>idea</strong> <br>into an exceptional <br><strong>digital
                                 experience</strong>
                         </h2>
-                        <div class="pt_60">
+                        <div class="pt_60 desk-only">
                             <a href="javascript:void(0)" class="btn-1" onclick="focusForm2()">Let’s Talk</a>
                         </div>
                     </div>
@@ -880,7 +887,7 @@
                         <div class="pt_60">
                             <a href="javascript:void(0)" class="btn-1" onclick="focusForm2()">Let's Connect! </a>
                         </div>
-                        <div class="contact-details pt_60">
+                        <div class="contact-details pt_60 desk-only">
                             <div class="icon-box white">
                                 <div>
                                     <img src="img/mail.svg" alt="mail">
@@ -898,7 +905,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="contact-details pt_40">
+                        <div class="contact-details pt_40 desk-only">
                             <div class="icon-box white">
                                 <div>
                                     <img src="img/map-pin.svg" alt="/map-pin">
@@ -942,6 +949,8 @@
                             <a href="javascript:void(0)"><img src="img/twitter.svg" alt="twitter"></a>
                             <a href="javascript:void(0)"><img src="img/linkedin.svg" alt="linkedin"></a>
                             <a href="javascript:void(0)"><img src="img/instagram.svg" alt="instagram"></a>
+                            <a href="javascript:void(0)"><img src="img/dribbble-logo.png" alt="dribble" width="16"></a>
+                            <a href="javascript:void(0)"><img src="img/google.png" alt="google" width="16"></a>
                         </div>
                     </div>
 
@@ -1030,21 +1039,7 @@
         });
     </script>
     <script>
-        $('.testimonialSlider').slick({
-            variableWidth: true,
-            arrows: true,
-            dots: true,
-            responsive: [
-                {
-                    breakpoint: 767,
-                    settings: {
-                        variableWidth: false,
-                        slidesToShow: 1,
-                        arrows: false,
-                    }
-                }
-            ]
-        });
+
 
 
         function checkPosition() {
@@ -1069,6 +1064,68 @@
                         autoplay: true,
                     }
                 )
+
+                $('.testimonialSlider').slick({
+                    variableWidth: false,
+                    arrows: true,
+                    dots: true,
+                });
+
+                const servicesSliderOne = new Splide('.servicesSliderOne', {
+                    type: 'slide',
+                    drag: 'free',
+                    snap: true,
+                    perPage: 1,
+                    // rewind: true,
+                    // isNavigation: true,
+                    arrows: true,
+                    pagination: true,
+                }).mount();
+            }
+            else if (window.matchMedia('(min-width: 768px)').matches) {
+                $('.testimonialSlider').slick({
+                    variableWidth: true,
+                    arrows: true,
+                    dots: true,
+                });
+
+
+                const thumbnails = new Splide('.servicesSliderTwo', {
+                    rewind: true,
+                    autoWidth: true,
+                    isNavigation: true,
+                    gap: 10,
+                    arrows: true,
+                    // focus: 'center',
+                    pagination: true,
+                    // cover: true,
+                    drag: 'free',
+                    focus: 'center',
+                }).mount();
+
+                const servicesSliderOne = new Splide('.servicesSliderOne', {
+                    type: 'fade',
+                    pagination: false,
+                    arrows: true,
+                    cover: true,
+                    // perPage: 1,
+                    breakpoints: {
+                        767: {
+                            type: 'slide',
+                            drag: 'free',
+                            snap: true,
+                            perPage: 1,
+                            rewind: true,
+                            isNavigation: true,
+                            arrows: true,
+                            pagination: true,
+                        },
+                    }
+                });
+
+                servicesSliderOne.sync(thumbnails).mount();
+
+
             }
         }
         $(window).on("resize load", function () {
@@ -1076,39 +1133,6 @@
         });
 
 
-        document.addEventListener("DOMContentLoaded", function () {
-            const thumbnails = new Splide('.servicesSliderTwo', {
-                rewind: true,
-                autoWidth: true,
-                isNavigation: true,
-                gap: 10,
-                arrows: true,
-                // focus: 'center',
-                pagination: true,
-                // cover: true,
-                drag: 'free',
-                focus: 'center',
-            }).mount();
-
-            const servicesSliderOne = new Splide('.servicesSliderOne', {
-                type: 'fade',
-                pagination: false,
-                arrows: true,
-                cover: true,
-                // perPage: 1,
-                breakpoints: {
-                    767: {
-                        rewind: true,
-                        isNavigation: true,
-                        arrows: true,
-                        pagination: true,
-                    },
-                }
-            });
-
-            servicesSliderOne.sync(thumbnails).mount();
-
-        });
 
         $(window).on('load resize', function () {
             var totalSlide = $('.slick-dots li').length;
@@ -1143,7 +1167,7 @@
 
             var items = $(".tech-box").length;
             $("#more-tech").click(function () {
-                shown = $(".tech-box:visible").length + 12;
+                shown = $(".tech-box:visible").length + 20;
                 if (shown < items) {
                     $(".tech-box:lt(" + shown + ")").show();
                 } else {
@@ -1161,7 +1185,7 @@
 
             var items = $(".card-item").length;
             $("#more-service").click(function () {
-                shown = $(".card-item:visible").length + 4;
+                shown = $(".card-item:visible").length + 8;
                 if (shown < items) {
                     $(".card-item:lt(" + shown + ")").show();
                 } else {
