--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
                     <a href="javascript:void(0)" class="brand">
                         <img src="img/logo.png" alt="logo">
                     </a>
-                    <button type="button" class="burger" id="burger">
+                    <a onclick="focusForm2()" class="menu-link btn-1 mob-only" href="javascript:void(0)">Start a
+                        Project</a>
+                    <!-- <button type="button" class="burger" id="burger">
                         <span class="burger-line"></span>
                         <span class="burger-line"></span>
                         <span class="burger-line"></span>
-                    </button>
-                    <span class="overlay" id="overlay"></span>
+                    </button> -->
+                    <!-- <span class="overlay" id="overlay"></span> -->
                     <div class="menu" id="menu">
                         <ul class="menu-block">
                             <li class="menu-item"><a onclick="focusForm2()" class="menu-link btn-1"
